--- a/starter_files/style.css
+++ b/starter_files/style.css
@@ -74,7 +74,6 @@ thead {
 
 table, tbody {
   font-family: 'Arial';
-  border-color: #1fabe5;
   margin: 25px auto;
   border: 1px solid #1fabe5;
   border-bottom: 2px solid #1fabe5;
@@ -93,10 +92,14 @@ table, tbody {
 
 tbody {
   color: #999;
-  border: 1px solid #1fabe5;
+  /*border: 1px solid #1fabe5;*/
   padding: 12px 35px;
   border-collapse: separate;
   display: flex;
   justify-content: space-around;
   flex-wrap: nowrap;
+}
+
+td {
+  border: 5px solid #1fabe5;
 }
